# NeuroJIT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_GitHub.md  README_PYPI.md  README_ko.md  docker-compose.yml  out.txt  pyproject.toml  run.sh
data/output/: actionable.csv  actionable_random_forest.csv  actionable_xgboost.csv  random_forest_baseline+hcc.json  random_forest_baseline.json  random_forest_combined.json  random_forest_cuf.json  random_forest_hcc.json  xgboost_baseline+hcc.json  xgboost_baseline.json  xgboost_combined.json  xgboost_cuf.json  xgboost_hcc.json
data/tp_samples/: activemq.json  activemq_baseline.json  activemq_baseline_metrics.json  activemq_common.json  activemq_hcc.json  activemq_hcc_metrics.json  activemq_metrics.json  camel.json  camel_baseline.json  camel_baseline_metrics.json  camel_common.json  camel_hcc.json  camel_hcc_metrics.json  camel_metrics.json  cassandra.json  cassandra_baseline.json  cassandra_baseline_metrics.json  cassandra_common.json  cassandra_hcc.json  cassandra_hcc_metrics.json  cassandra_metrics.json  flink.json  flink_baseline.json  flink_baseline_metrics.json  flink_common.json  flink_hcc.json  flink_hcc_metrics.json  flink_metrics.json  groovy.json  groovy_baseline.json  groovy_baseline_metrics.json  groovy_common.json  groovy_hcc.json  groovy_hcc_metrics.json  groovy_metrics.json  hbase.json  hbase_baseline.json  hbase_baseline_metrics.json  hbase_common.json  hbase_hcc.json  (+16 more)
rebuttal/: experiments.md  result.md
rebuttal/output/: actionable.csv  actionable_random_forest.csv  decision_tree_baseline.json  decision_tree_combined.json  knn_cuf.json  (+18 more)
scripts/: actionable.sh  analysis.py  app.py  calculate.py  cleaner.py  collect.py  commit_distribution.ipynb  compute.py  data_utils.py  environment.py  extract_pickles.sh  filtering.ipynb  jit_sdp.py  playground.ipynb  pre_analysis.py  reproduce.sh  rq1.sh  rq2.sh  rq3.sh  visualization.py
(+400 files in other folders)
