[project]
name = "hcc_cal"
version = "0.1.0"
description = "HCC-Cal: A Python Library for Calculating the Human-centric Code Complexity (HCC) Metrics"
dependencies = [
    "javalang>=0.13.0",
    "scipy>=1.12.0",
    "pandas>=2.2.1",
    "PyDriller>=2.6",
    "cliffs-delta>=1.0.0",
    "scikit-learn>=1.4.1.post1",
    "statsmodels>=0.14.1",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "imblearn>=0.0",
    "rich>=13.7.1",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "xgboost>=2.0.3",
    "ipykernel>=6.29.3",
    "typer[all]>=0.10.0",
    "lime>=0.2.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hcc_cal"]
